pado_visualize: sidebar fix logo alignment

--- a/pado_visualize/static_src/css/base.scss
+++ b/pado_visualize/static_src/css/base.scss
@@ -93,7 +93,7 @@ $menu-text-color-subtle: #bbb;
 .pado-sidebar .header {
   a {
     display: grid;
-    grid-template: 1fr auto / 1fr auto;
+    grid-template: 1fr auto / 34px auto;
     padding: 10px 10px;
     border-radius: $menu-border-radius;
     text-decoration: none;
